--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ pytest = "7.4.0"
 [tool.poetry.dependencies]
 python = "^3.10,<3.11"
 numpy = "1.24.4"
+nltk = "3.8.1"
 
 # [[tool.poetry.source]]
 # name = "dtonchev"
