--- a/.github/workflows/mm-test.yml
+++ b/.github/workflows/mm-test.yml
@@ -17,14 +17,17 @@ jobs:
       - uses: mamba-org/setup-micromamba@v1
         with:
           micromamba-version: '1.5.8-0'
+          environment-name: ${{ matrix.python-version }}
           create-args: >-
             pip
             numpy
+            python=${{ matrix.python-version }}
           post-cleanup: 'all'
       - name: Install dependencies
         run: |
-          python -m pip install .
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install .
+          pip install pytest
+          if [ -f requirements_dev.txt ]; then pip install -r requirements_dev.txt; fi
       - name: Run custom command in micromamba environment
-        run: pytest --version
+        run: pytest
         shell: micromamba-shell {0}
