--- a/.github/workflows/mm-test.yml
+++ b/.github/workflows/mm-test.yml
@@ -25,8 +25,8 @@ jobs:
           post-cleanup: 'all'
       - name: Install dependencies
         run: |
-          pip install .
-          pip install pytest
+          python -m pip install .
+          python -m pip install pytest
           if [ -f requirements_dev.txt ]; then pip install -r requirements_dev.txt; fi
       - name: Run custom command in micromamba environment
         run: pytest
