--- a/.github/workflows/mm-test.yml
+++ b/.github/workflows/mm-test.yml
@@ -18,17 +18,20 @@ jobs:
         with:
           micromamba-version: '1.5.8-0'
           environment-name: ${{ matrix.python-version }}
+          init-shell: >-
+            bash
           create-args: >-
             pip
             numpy
             python=${{ matrix.python-version }}
-          post-cleanup: 'all'
-      - name: Install dependencies
+          post-cleanup: 'none'
+      - name: Install package and pytest 
         run: |
           python -m pip install .
           python -m pip install pytest
           if [ -f requirements_dev.txt ]; then pip install -r requirements_dev.txt; fi
-        shell: micromamba-shell {0}
+        # shell: micromamba-shell {0}
       - name: Run custom command in micromamba environment
-        run: pytest
-        shell: micromamba-shell {0}
+        run: |
+          pytest
+        # shell: micromamba-shell {0}
